# zulip-rs

./: Cargo.toml
src/: lib.rs
src/api/: api.rs  config.rs  errors.rs  message.rs  mod.rs  narrow.rs  queue_api.rs
