[package]
name = "zulip-rs"
version = "0.1.0"
authors = ["Julian Bieber <j.bieber@patagona.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.101", features = ["derive"]}
serde_json = "1.0.40"
failure = "0.1.5"
reqwest = "0.9.20"
dirs = "2.0.2"
lazy_static = "1.4.0"
toml = "0.5.3"